v3/cypress/fixtures/invalid-docs/invalid-content.codap
{
    "type": "CODAP",
    "version": "1234",
    "content": {
        "invalid": "value"
    }
}
